--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@angular/router": "^19.0.0",
     "@capacitor-community/date-picker": "^6.0.0",
     "@capacitor-community/file-opener": "^6.0.1",
+    "@capacitor-community/speech-recognition": "^6.0.1",
     "@capacitor/android": "6.2.0",
     "@capacitor/app": "6.0.2",
     "@capacitor/browser": "^6.0.4",
