--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@capacitor-community/date-picker": "^6.0.0",
     "@capacitor-community/file-opener": "^6.0.1",
     "@capacitor-community/speech-recognition": "^6.0.1",
+    "@capacitor-community/text-to-speech": "^5.1.0",
     "@capacitor/android": "6.2.0",
     "@capacitor/app": "6.0.2",
     "@capacitor/browser": "^6.0.4",
