--- a/android/app/capacitor.build.gradle
+++ b/android/app/capacitor.build.gradle
@@ -23,6 +23,8 @@ dependencies {
     implementation project(':capacitor-status-bar')
     implementation project(':capacitor-text-zoom')
     implementation project(':capawesome-capacitor-live-update')
+    implementation project(':capacitor-native-biometric')
+    implementation project(':capacitor-native-settings')
 
 }
 
