--- a/ios/App/App/Info.plist
+++ b/ios/App/App/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>vi</string>
 	<key>CFBundleDisplayName</key>
-        <string>Hướng&#x2007;nghiệp</string>
+  <string>Hướng&#x2007;nghiệp</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -33,8 +33,6 @@
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
-		<string>UIInterfaceOrientationLandscapeLeft</string>
-		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
@@ -49,5 +47,12 @@
   <string>Chúng tôi cần quyền truy cập vào chức năng nhận dạng giọng nói để chuyển giọng nói của bạn thành văn bản.</string>
   <key>NSMicrophoneUsageDescription</key>
   <string>Chúng tôi cần quyền truy cập vào micrô của bạn để ghi âm giọng nói nhằm mục đích nhận dạng giọng nói.</string>
+  <key>NSFaceIDUsageDescription</key>
+  <string>Cho phép truy cập nhận dạng sinh trắc học để xác thực người dùng</string>
+  <key>UIBackgroundModes</key>
+  <array>
+  	<string>remote-notification</string>
+  	<string>fetch</string>
+  </array>
 </dict>
 </plist>
