--- a/package.json
+++ b/package.json
@@ -49,6 +49,9 @@
     "@ionic/storage-angular": "^4.0.0",
     "@ngx-translate/core": "^16.0.4",
     "@ngx-translate/http-loader": "^16.0.1",
+    "capacitor-native-biometric": "^4.2.2",
+    "capacitor-native-settings": "^6.0.5",
+    "crypto-js": "^4.2.0",
     "date-fns": "^4.1.0",
     "howler": "^2.2.4",
     "ionicons": "^7.0.0",
@@ -72,8 +75,10 @@
     "@ionic/angular-toolkit": "^12.0.0",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.16",
+    "@types/crypto-js": "^4.2.2",
     "@types/howler": "^2.2.12",
     "@types/jasmine": "~5.1.0",
+    "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^8.18.0",
     "@typescript-eslint/parser": "^8.18.0",
     "autoprefixer": "^10.4.20",
