--- a/angular.json
+++ b/angular.json
@@ -37,7 +37,8 @@
             ],
             "scripts": [],
             "allowedCommonJsDependencies": [
-              "localforage"
+              "localforage",
+              "howler"
             ]
           },
           "configurations": {
