fix(auth): Thay đổi lưu trữ và mã hóa thông tin cục bộ trên thiết bị, xử lý tính năng khóa app

--- a/angular.json
+++ b/angular.json
@@ -38,7 +38,8 @@
             "scripts": [],
             "allowedCommonJsDependencies": [
               "localforage",
-              "howler"
+              "howler",
+              "crypto-js"
             ]
           },
           "configurations": {
