--- a/package.json
+++ b/package.json
@@ -31,17 +31,18 @@
     "@capacitor-community/file-opener": "^6.0.1",
     "@capacitor-community/speech-recognition": "^6.0.1",
     "@capacitor-community/text-to-speech": "^5.1.0",
-    "@capacitor/android": "6.2.0",
-    "@capacitor/app": "6.0.2",
+    "@capacitor/android": "^6.2.0",
+    "@capacitor/app": "^6.0.2",
     "@capacitor/browser": "^6.0.4",
-    "@capacitor/core": "6.2.0",
+    "@capacitor/core": "^6.2.0",
+    "@capacitor/device": "^6.0.2",
     "@capacitor/filesystem": "^6.0.3",
-    "@capacitor/haptics": "6.0.2",
-    "@capacitor/ios": "6.2.0",
-    "@capacitor/keyboard": "6.0.3",
+    "@capacitor/haptics": "^6.0.2",
+    "@capacitor/ios": "^6.2.0",
+    "@capacitor/keyboard": "^6.0.3",
     "@capacitor/local-notifications": "^6.0.2",
     "@capacitor/push-notifications": "^6.0.2",
-    "@capacitor/status-bar": "6.0.2",
+    "@capacitor/status-bar": "^6.0.2",
     "@capacitor/text-zoom": "^6.0.3",
     "@capawesome/capacitor-live-update": "^6.7.1",
     "@ionic/angular": "^8.0.0",
@@ -71,7 +72,7 @@
     "@angular/compiler-cli": "^19.0.0",
     "@angular/language-service": "^19.0.0",
     "@capacitor/assets": "^3.0.5",
-    "@capacitor/cli": "6.2.0",
+    "@capacitor/cli": "^6.2.0",
     "@ionic/angular-toolkit": "^12.0.0",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.16",
