--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "@capacitor-community/file-opener": "^6.0.1",
     "@capacitor-community/speech-recognition": "^6.0.1",
     "@capacitor-community/text-to-speech": "^5.1.0",
-    "@capacitor/android": "^6.2.0",
+    "@capacitor/android": "6.2.0",
     "@capacitor/app": "^6.0.2",
     "@capacitor/browser": "^6.0.4",
     "@capacitor/core": "^6.2.0",
@@ -54,6 +54,7 @@
     "capacitor-native-settings": "^6.0.5",
     "crypto-js": "^4.2.0",
     "date-fns": "^4.1.0",
+    "firebase": "^11.6.1",
     "howler": "^2.2.4",
     "ionicons": "^7.0.0",
     "rxjs": "~7.8.0",
