feat(student-footer): Layout footer, change encrypt library, fix home page style, add animation lottie

--- a/package.json
+++ b/package.json
@@ -52,11 +52,12 @@
     "@ngx-translate/http-loader": "^16.0.1",
     "capacitor-native-biometric": "^4.2.2",
     "capacitor-native-settings": "^6.0.5",
-    "crypto-js": "^4.2.0",
     "date-fns": "^4.1.0",
     "firebase": "^11.6.1",
     "howler": "^2.2.4",
     "ionicons": "^7.0.0",
+    "lottie-web": "^5.12.2",
+    "ngx-lottie": "^13.0.1",
     "rxjs": "~7.8.0",
     "swiper": "^11.2.6",
     "tslib": "^2.3.0",
