feat(live-upadte-app): Tích hợp live update với server

--- a/angular.json
+++ b/angular.json
@@ -44,7 +44,8 @@
             "allowedCommonJsDependencies": [
               "localforage",
               "howler",
-              "crypto-js"
+              "crypto-js",
+              "lottie-web"
             ]
           },
           "configurations": {
