--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "lint": "ng lint",
     "ionic-run-dev": "ionic serve --port 8085 --external",
     "ionic-run-prod": "ionic serve --port 8085 --external --prod",
+    "ionic-capacitor-build-develop-android": "ionic capacitor build android --configuration=development",
+    "ionic-capacitor-sync-develop-android": "ionic capacitor sync android --configuration=development",
+    "ionic-capacitor-build-develop-ios": "ionic capacitor build ios --configuration=development",
+    "ionic-capacitor-sync-develop-ios": "ionic capacitor sync ios --configuration=development",
     "ionic-capacitor-build-android": "ionic capacitor build android --prod",
     "ionic-capacitor-sync-android": "ionic capacitor sync android --prod",
     "ionic-capacitor-build-ios": "ionic capacitor build ios --prod",
