--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@capacitor/android": "6.2.0",
     "@capacitor/app": "^6.0.2",
     "@capacitor/browser": "^6.0.4",
+    "@capacitor/camera": "^6.1.2",
     "@capacitor/core": "^6.2.1",
     "@capacitor/device": "^6.0.2",
     "@capacitor/filesystem": "^6.0.3",
