fix(sound-native): cập nhật thư viện âm thanh

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@angular/router": "^19.0.0",
     "@capacitor-community/date-picker": "^6.0.0",
     "@capacitor-community/file-opener": "^6.0.1",
+    "@capacitor-community/native-audio": "^6.0.0",
     "@capacitor-community/speech-recognition": "^6.0.1",
     "@capacitor-community/text-to-speech": "^5.1.0",
     "@capacitor/android": "6.2.0",
@@ -59,7 +60,6 @@
     "capacitor-native-settings": "^6.0.5",
     "date-fns": "^4.1.0",
     "firebase": "^11.6.1",
-    "howler": "^2.2.4",
     "ionicons": "^7.0.0",
     "lottie-web": "^5.12.2",
     "ngx-lottie": "^13.0.1",
@@ -85,7 +85,6 @@
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.16",
     "@types/crypto-js": "^4.2.2",
-    "@types/howler": "^2.2.12",
     "@types/jasmine": "~5.1.0",
     "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^8.18.0",
